--- a/build.xml
+++ b/build.xml
@@ -606,7 +606,10 @@
             depends="daemon-client,preloader">
         <cleandir dir="${output}/classes/kotlin-build"/>
 
-        <kotlinc output="${output}/classes/kotlin-build" modulename="kotlin-build">
+        <javac2 destdir="${output}/classes/kotlin-build" debug="true" debuglevel="lines,vars,source" includeAntRuntime="false"
+                source="${java.target}" target="${java.target}">
+            <withKotlin modulename="kotlin-build"/>
+            <skip pattern="kotlin/jvm/internal/.*"/>
             <src>
                 <pathelement path="build/src"/>
             </src>
@@ -619,11 +622,37 @@
                 <pathelement path="${kotlin-home}/lib/kotlin-compiler.jar"/>
                 <pathelement path="${kotlin-home}/lib/kotlin-daemon-client.jar"/>
             </classpath>
-        </kotlinc>
+        </javac2>
 
         <jar destfile="${kotlin-home}/lib/kotlin-build.jar">
             <fileset dir="${output}/classes/kotlin-build"/>
             <zipfileset file="${kotlin-home}/build.txt" prefix="META-INF"/>
+            <zipfileset src="${intellij.util.jar}"/>
+            <zipfileset src="${kotlin-home}/lib/kotlin-preloader.jar"/>
+            <zipfileset src="${kotlin-home}/lib/kotlin-daemon-client.jar"/>
+            <zipfileset src="${trove4j.jar}"/>
+            <zipfileset src="${dependencies.dir}/cli-parser-1.1.1.jar"/>
+
+            <manifest>
+                <attribute name="Built-By" value="${manifest.impl.vendor}"/>
+
+                <attribute name="Implementation-Vendor" value="${manifest.impl.vendor}"/>
+                <attribute name="Implementation-Title" value="${manifest.impl.title.kotlin.build}"/>
+                <attribute name="Implementation-Version" value="${build.number}"/>
+            </manifest>
+        </jar>
+
+        <jar jarfile="${output}/kotlin-build-sources.jar">
+            <fileset dir="build/src"/>
+            <zipfileset file="${kotlin-home}/build.txt" prefix="META-INF"/>
+
+            <manifest>
+                <attribute name="Built-By" value="${manifest.impl.vendor}"/>
+
+                <attribute name="Implementation-Vendor" value="${manifest.impl.vendor}"/>
+                <attribute name="Implementation-Title" value="${manifest.impl.title.kotlin.build.sources}"/>
+                <attribute name="Implementation-Version" value="${build.number}"/>
+            </manifest>
         </jar>
     </target>
 
@@ -646,6 +675,14 @@
             <fileset dir="${output}/classes/daemon-client"/>
             <zipfileset src="${dependencies.dir}/native-platform-uberjar.jar" includes="**" />
             <zipfileset file="${kotlin-home}/build.txt" prefix="META-INF"/>
+
+            <manifest>
+                <attribute name="Built-By" value="${manifest.impl.vendor}"/>
+
+                <attribute name="Implementation-Vendor" value="${manifest.impl.vendor}"/>
+                <attribute name="Implementation-Title" value="${manifest.impl.title.kotlin.daemon-client}"/>
+                <attribute name="Implementation-Version" value="${build.number}"/>
+            </manifest>
         </jar>
     </target>
 
