Fixing incremental caches handling

--- a/libraries/tools/kotlin-compiler-embeddable/pom.xml
+++ b/libraries/tools/kotlin-compiler-embeddable/pom.xml
@@ -137,6 +137,9 @@
                                 <relocation>
                                     <pattern>com.google</pattern>
                                     <shadedPattern>${kotlin.relocated.package}.com.google</shadedPattern>
+                                    <excludes>
+                                        <exclude>com.google.protobuf.*</exclude>
+                                    </excludes>
                                 </relocation>
                                 <!--
                                 <relocation>
