--- a/idea/idea-analysis/src/org/jetbrains/kotlin/idea/KotlinBundle.properties
+++ b/idea/idea-analysis/src/org/jetbrains/kotlin/idea/KotlinBundle.properties
@@ -263,6 +263,7 @@ suppress.warning.for=Suppress ''{0}'' for {1} {2}
 
 reflection.not.found=Reflection not found in the classpath
 add.reflection.to.classpath=Add kotlin-reflect.jar to the classpath
+add.test.to.classpath=Add kotlin-test.jar to the classpath
 
 # Kotlin Compiler Settings Tab
 
